--- a/ag-certificado.html
+++ b/ag-certificado.html
@@ -35,10 +35,9 @@
                     </form>
                 </div>
                 <div class="section-btn row">
-                    <a href="ag-dam.html" class="btn">Entrar</a>
-                    <a href="ag-login.html" class="btn voltar">Voltar</a>
+                    <a href="ag-dam.html" class="btn">ENTRAR</a>
+                    <a href="ag-login.html" class="btn voltar">VOLTAR</a>
                 </div>
-                <hr class="d-none">
                 <div class="section-footer">
                     <div class="d-none">
                         <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
