--- a/ag-dam.html
+++ b/ag-dam.html
@@ -69,73 +69,115 @@
             </button>
             <select type="text" id="input-tributos" class="flex-grow-1 p-2">
                 <option disabled="disabled" selected="selected">Selecione um tributo</option>
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
+                <option>IPTU - IPTU GRAND</option>
+                <option>ALUGUEL 2 - ALUGUEL</option>
+                <option>LIX - COLETA DE LIXO</option>
             </select>
         </div>
         <section class="tributos__section mt-3 mb-1">
-            <div>
-                <h5 class="tributos-title">Tributo</h5>
-                <!-- COMO VAI SER A ESCOLHA DO TRIBUTO A SER PAGO? -->
-                <p>IPTU - IPTU GRAND</p> 
-                <p>ALUGUEL 2 - ALUGUEL</p>
+            <div class="tributos-title">
+                <h5>Tributos</h5>
+                <h5>Emissão</h5>
+                <h5>Vencimento</h5>
+                <h5>Subtotal</h5>
+                <h5>Desconto</h5>
+                <h5>Juros</h5>
+                <h5>Multa</h5>
+                <h5>Situação</h5>
+            </div>
+            <div class="tributos">
+                <p>IPTU - IPTU GRAND</p>
+                <p>20/09/2023</p>
+                <p>25/09/2023</p>
+                <p>1.000,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>Pendente</p>
+            </div>
+            <div class="tributos">
                 <p>LIX - COLETA DE LIXO</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Emissão</h5>
+                <p>20/09/2023</p>
                 <p>25/09/2023</p>
-                <p>15/09/2023</p>
-                <p>15/09/2023</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Vencimento</h5>
-                <p>25/09/2023</p>
-                <p>15/09/2023</p>
-                <p>15/09/2023</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Subtotal</h5>
-                <p>1.000,00</p>
-                <p>1.000,00</p>
                 <p>200,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>Ativada</p>
             </div>
-            <div>
-                <h5 class="tributos-title">Desconto</h5>
+            <div class="tributos">
+                <p>ALUGUEL 2 - ALUGUEL</p>
+                <p>20/09/2023</p>
+                <p>25/09/2023</p>
+                <p>1.000,00</p>
                 <p>0,00</p>
                 <p>0,00</p>
                 <p>0,00</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Juros</h5>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Multa</h5>
-                <p>0,00</p>
-                <p>0,00</p>
-                <p>0,00</p>
-            </div>
-            <div>
-                <h5 class="tributos-title">Situação</h5>
                 <p>Pendente</p>
+            </div>
+            <div class="tributos">
+                <p>IPTU - IPTU GRAND</p>
+                <p>20/09/2023</p>
+                <p>25/09/2023</p>
+                <p>1.000,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
                 <p>Pendente</p>
+            </div>
+            <div class="tributos">
+                <p>LIX - COLETA DE LIXO</p>
+                <p>20/09/2023</p>
+                <p>25/09/2023</p>
+                <p>200,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>Ativada</p>
+            </div>
+            <div class="tributos">
+                <p>IPTU - IPTU GRAND</p>
+                <p>20/09/2023</p>
+                <p>25/09/2023</p>
+                <p>1.000,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>Pendente</p>
+            </div>
+            <div class="tributos">
+                <p>ALUGUEL 2 - ALUGUEL</p>
+                <p>20/09/2023</p>
+                <p>25/09/2023</p>
+                <p>1.000,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>Pendente</p>
+            </div>
+            <div class="tributos">
+                <p>IPTU - IPTU GRAND</p>
+                <p>20/09/2023</p>
+                <p>25/09/2023</p>
+                <p>1.000,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
+                <p>0,00</p>
                 <p>Pendente</p>
             </div>
         </section>
         <div class="column tributos-footer">
-            <p>Total de <span class="border px-1">50</span> registros</p>
-            <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
+            <p>Total de <span class="tributos-counter">8</span> registros</p>
+            <p>Página <span class="border rounded px-1">1</span> de <span class="tributos-pag">5</span></p>
         </div>
         <div class="d-flex justify-content-end pt-2">
             <button class="pay-btn column align-items-center gap-2">
                 <i class="bi bi-cash"></i>
-                <p>Pagar</p>
+                <p>PAGAR</p>
             </button>
         </div>
     </main>
+    <!-- Filtro -->
     <aside class="sidebar p-3">
         <div class="d-flex justify-content-between align-items-center py-3">
             <h3 class="aside-title m-0">Filtros</h3>
