--- a/ag-senha.html
+++ b/ag-senha.html
@@ -26,10 +26,9 @@
                     </form>
                 </div>
                 <div class="section-btn row">
-                    <a href="#" class="btn">Redefinir senha</a>
-                    <a href="ag-login.html" class="btn voltar">Voltar</a>
+                    <a href="#" class="btn">REDEFINIR SENHA</a>
+                    <a href="ag-login.html" class="btn voltar">VOLTAR</a>
                 </div>
-                <hr class="d-none">
                 <div class="section-footer">
                     <div class="d-none">
                         <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
