--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/portal.css">
+    <script src="/js/jquery-3.2.1.min.js"></script>
     <title>Portal do Contribuinte</title>
 </head>
 <body>
@@ -14,14 +15,17 @@
         <div class="container d-flex justify-content-between align-items-center">
             <img src="images/logo/Union.png" class="ag-logo" alt="agape">
             <div>
-                <button class="a11y-button">
+                <button class="a11y-button" id="btnDiminuir">
                     <i class="bi bi-zoom-out"></i>
                 </button>
                 <button class="a11y-button" id="contraste-btn">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="a11y-button">
+                <button class="a11y-button" id="btnAumentar">
                     <i class="bi bi-zoom-in"></i>
+                </button>
+                <button class="a11y-button" id="btnReset">
+                    <i class="bi bi-fonts"></i>
                 </button>
             </div>
         </div>
@@ -74,6 +78,12 @@
                     </div>
                     <div class="pt-2">
                         <button class="a11y-button">
+                            <i class="bi bi-fonts"></i>
+                        </button>
+                        <span class="ms-1">Este retorna o tamanho para a fonte padrão</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
                             <i class="bi bi-circle-half"></i>
                         </button>
                         <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
@@ -89,6 +99,7 @@
         </div>
     </div> 
     <script src="app.js"></script>
+    <script src="/js/acessibilidade.js"></script>
     <script src="js/portal.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
