--- a/ag-dam.html
+++ b/ag-dam.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/portal.css">
     <link rel="stylesheet" href="css/dam.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
+    <script src="/js/jquery-3.2.1.min.js"></script>
     <title>2º Via DAM</title>
 </head>
 <body>
@@ -16,14 +17,17 @@
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
-                <button class="a11y-button">
+                <button class="a11y-button" id="btnDiminuir">
                     <i class="bi bi-zoom-out"></i>
                 </button>
                 <button id="contraste-btn" class="a11y-button">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="a11y-button">
+                <button class="a11y-button" id="btnAumentar">
                     <i class="bi bi-zoom-in"></i>
+                </button>
+                <button class="a11y-button" id="btnReset">
+                    <i class="bi bi-fonts"></i>
                 </button>
             </div>
         </div>
@@ -274,6 +278,7 @@
         </div>
     </div> 
     <script src="app.js"></script>
+    <script src="/js/acessibilidade.js"></script>
     <script src="js/dam.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
