--- a/ag-dam.html
+++ b/ag-dam.html
@@ -257,15 +257,35 @@
         <div class="aside-content">
             <h5 class="list-title">Data</h5>
             <ul class="aside-list">
-               <li><input type="checkbox" class="me-2">3 dias</li>
-               <li><input type="checkbox" class="me-2">7 dias</li>
-               <li><input type="checkbox" class="me-2">15 dias</li>
+                <li><input type="checkbox" class="me-2">3 dias</li>
+                <li><input type="checkbox" class="me-2">7 dias</li>
+                <li><input type="checkbox" class="me-2">15 dias</li>
             </ul>
+            <h5 class="list-title">Período</h5>
+            <ul class="aside-list">
+                <strong class="periodo">Inicial</strong>
+                <li><input type="date" class="me-2"></li>
+                <strong class="periodo">Final</strong>
+                <li><input type="date" class="me-2"></li>
+            <h5 class="list-title">Ano</h5>
+            <select class="form-select form-select-sm" aria-label="Small select example">
+                <option selected>Selecione o ano</option>
+                <option value="2024">2024</option>
+                <option value="2023">2023</option>
+                <option value="2022">2022</option>
+                <option value="2021">2021</option>
+                <option value="2020">2020</option>
+            </select>
             <h5 class="list-title">Situação</h5>
             <ul class="aside-list">
                 <li><input type="checkbox" class="me-2">Pago</li>
                 <li><input type="checkbox" class="me-2">Pendente</li>
                 <li><input type="checkbox" class="me-2">Atrasado</li>
+            </ul>
+            <h5 class="list-title">Subtotal</h5>
+            <ul class="aside-list">
+                <label for="subtotal">R$</label>
+                <input type="text" maxlength="9" id="subtotal" onkeyup="formatarSubtotal()" class="me-2">
             </ul>
             <h5 class="list-title">Mostrar/Ocultar dados</h5>
             <ul class="aside-list">
@@ -289,6 +309,7 @@
     <script src="app.js"></script>
     <script src="/js/acessibilidade.js"></script>
     <script src="js/dam.js"></script>
+    <script src="/js/mask.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
