--- a/ag-dam.html
+++ b/ag-dam.html
@@ -244,7 +244,6 @@
                 <i class="bi bi-cash"></i>
                 <p>PAGAR</p>
             </button>
-            
             <div id="pagar" class="modal fade" tabindex="-1">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
@@ -253,7 +252,42 @@
                             <button class="btn-close" data-bs-dismiss="modal"></button>
                         </div>
                         <div class="modal-body">
-                            a
+                            <div class="tributos">
+                                <div>
+                                    <span>EMISSÃO</span>
+                                    <span>VENCIMENTO</span>
+                                    <span>SUBTOTAL</span>
+                                    <span>VALOR CORRIGIDO</span>
+                                    <span>SITUAÇÃO</span>
+                                    <span>IMPRIMIR</span>
+                                    <span>CANCELAR</span>
+                                </div>
+                                <div>
+                                    <span>25/09/2023</span>
+                                    <span>25/09/2023</span>
+                                    <span>200,00</span>
+                                    <span>235,00</span>
+                                    <span>Pendente</span>
+                                    <span></span>
+                                </div>
+                                <div>
+                                    <span>25/09/2023</span>
+                                    <span>25/09/2023</span>
+                                    <span>200,00</span>
+                                    <span>250,00</span>
+                                    <span>Pendente</span>
+                                    <span></span>
+                                </div>
+                                <div>
+                                    <span>25/09/2023</span>
+                                    <span>25/09/2023</span>
+                                    <span>200,00</span>
+                                    <span>221,00</span>
+                                    <span>Pendente</span>
+                                    <span></span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
