--- a/ag-dam.html
+++ b/ag-dam.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="curtain"></div>
-    <header class="py-lg-2 py-xxl-3"> 
+    <header class="py-2 py-xxl-3"> 
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
