--- a/ag-dam.html
+++ b/ag-dam.html
@@ -239,6 +239,7 @@
             <p>Total de <span class="tributos-counter">5</span> registros</p>
             <p>Página <span class="border rounded px-1">1</span> de <span class="tributos-pag">5</span></p>
         </div>
+        <!-- MODAL PAGAMENTO -->
         <div class="d-flex justify-content-end pt-2">
             <button class="pay-btn column align-items-center gap-2" data-bs-toggle="modal" data-bs-target="#pagar">
                 <i class="bi bi-cash"></i>
@@ -293,7 +294,7 @@
             </div>
         </div>
     </main>
-    <!-- Filtro -->
+    <!-- FILTRO -->
     <aside class="sidebar p-3">
         <div class="d-flex justify-content-between align-items-center py-3">
             <h3 class="aside-title m-0">Filtros</h3>
@@ -345,7 +346,7 @@
                 <h5 class="list-title">Subtotal</h5>
             </div>
             <ul class="aside-list">
-                <input type="text" maxlength="9" id="subtotal" onkeyup="formatarSubtotal()" placeholder="Digite o valor desejado">
+                <input type="text" maxlength="9" id="subtotal"   onkeyup="formatarSubtotal()" placeholder="Digite o valor desejado">
             </ul>
             <div class="d-flex gap-2">
                 <i class="bi bi-calendar"></i>
