--- a/ag-dam.html
+++ b/ag-dam.html
@@ -14,7 +14,7 @@
 <body>
     <div class="curtain"></div>
     <header class="py-2 py-xxl-3"> 
-        <div class="container column align-items-center">
+        <div class="container-main column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
                 <button class="a11y-button" id="contraste-btn">
@@ -73,7 +73,7 @@
             </div> 
         </div>
     </header>
-    <main class="container">
+    <main class="container-main">
         <div class="column align-items-center py-3">
             <div class="gov-logo--container">
                 <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
@@ -131,42 +131,30 @@
                     <span>EMISSÃO</span>
                     <span>VENCIMENTO</span>
                     <span>SUBTOTAL</span>
+                    <span>EXERC.</span>
+                    <span>TOTAL</span>                   
                     <span>DESCONTO</span>
                     <span>JUROS</span>
                     <span>MULTA</span>
-                    <span>SITUAÇÃO</span>
+                    <span>STATUS</span>
+                    <span>TAXA EXP.</span>
+                    <span>TAXA ADICIONAL</span>
+                    <span>VALOR CORRIGIDO</span>
                 </div>
                 <div class="tributos-content">
-                    <span>IPTU - IPTU GRAND</span>
-                    <span>20/09/2023</span>
-                    <span>25/09/2023</span>
-                    <span>1.000,00</span>
-                    <span>0,00</span>
-                    <span>0,00</span>
-                    <span>0,00</span>
-                    <span>Pendente</span>
-                </div>
-            </div>
-            <div class="tributos">
-                <div class="tributos-title remove">
-                    <span>TRIBUTO</span>
-                    <span>EMISSÃO</span>
-                    <span>VENCIMENTO</span>
-                    <span>SUBTOTAL</span>
-                    <span>DESCONTO</span>
-                    <span>JUROS</span>
-                    <span>MULTA</span>
-                    <span>SITUAÇÃO</span>
-                </div>
-                <div class="tributos-content">
-                    <span>LIX - COLETA DE LIXO</span>
-                    <span>20/09/2023</span>
-                    <span>25/09/2023</span>
+                    <span>ISS NOTA FISCAL</span>
+                    <span>01/10/2018</span>
+                    <span>04/10/2018</span>
                     <span>200,00</span>
+                    <span>2018</span>
+                    <span>5,00</span>
                     <span>0,00</span>
-                    <span>0,00</span>
-                    <span>0,00</span>
+                    <span>0,54</span>
+                    <span>1,50</span>
                     <span>Pendente</span>
+                    <span>2,50</span>
+                    <span>0,00</span>
+                    <span>9,54</span>
                 </div>
             </div>
             <div class="tributos">
@@ -175,20 +163,30 @@
                     <span>EMISSÃO</span>
                     <span>VENCIMENTO</span>
                     <span>SUBTOTAL</span>
+                    <span>EXERC.</span>
+                    <span>TOTAL</span>                   
                     <span>DESCONTO</span>
                     <span>JUROS</span>
                     <span>MULTA</span>
-                    <span>SITUAÇÃO</span>
+                    <span>STATUS</span>
+                    <span>TAXA EXP.</span>
+                    <span>TAXA ADICIONAL</span>
+                    <span>VALOR CORRIGIDO</span>
                 </div>
                 <div class="tributos-content">
-                    <span>ALUGUEL 2 - ALUGUEL</span>
-                    <span>20/09/2023</span>
-                    <span>25/09/2023</span>
-                    <span>1.000,00</span>
+                    <span>ISS NOTA FISCAL</span>
+                    <span>01/10/2016</span>
+                    <span>04/10/2016</span>
+                    <span>525,05</span>
+                    <span>2016</span>
+                    <span>15,75</span>
                     <span>0,00</span>
-                    <span>0,00</span>
-                    <span>0,00</span>
+                    <span>5,55</span>
+                    <span>4,73</span>
                     <span>Pendente</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>26,03</span>
                 </div>
             </div>
             <div class="tributos">
@@ -197,42 +195,158 @@
                     <span>EMISSÃO</span>
                     <span>VENCIMENTO</span>
                     <span>SUBTOTAL</span>
+                    <span>EXERC.</span>
+                    <span>TOTAL</span>                   
                     <span>DESCONTO</span>
                     <span>JUROS</span>
                     <span>MULTA</span>
-                    <span>SITUAÇÃO</span>
+                    <span>STATUS</span>
+                    <span>TAXA EXP.</span>
+                    <span>TAXA ADICIONAL</span>
+                    <span>VALOR CORRIGIDO</span>
                 </div>
                 <div class="tributos-content">
-                    <span>IPTU - IPTU GRAND</span>
-                    <span>20/09/2023</span>
-                    <span>25/09/2023</span>
-                    <span>1.000,00</span>
-                    <span>0,00</span>
-                    <span>0,00</span>
-                    <span>0,00</span>
-                    <span>Pendente</span>
-                </div>
-            </div>
-            <div class="tributos">
-                <div class="tributos-title remove">
-                    <span>TRIBUTO</span>
-                    <span>EMISSÃO</span>
-                    <span>VENCIMENTO</span>
-                    <span>SUBTOTAL</span>
-                    <span>DESCONTO</span>
-                    <span>JUROS</span>
-                    <span>MULTA</span>
-                    <span>SITUAÇÃO</span>
-                </div>
-                <div class="tributos-content">
-                    <span>LIX - COLETA DE LIXO</span>
-                    <span>20/09/2023</span>
-                    <span>25/09/2023</span>
+                    <span>ALVARÁ</span>
+                    <span>29/08/2016</span>
+                    <span>01/09/2016</span>
                     <span>200,00</span>
+                    <span>2016</span>
+                    <span>6,00</span>
+                    <span>0,00</span>
+                    <span>2,18</span>
+                    <span>1,80</span>
+                    <span>Ativada</span>
                     <span>0,00</span>
                     <span>0,00</span>
+                    <span>9,98</span>
+                </div>
+            </div>
+            <div class="tributos">
+                <div class="tributos-title remove">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>EXERC.</span>
+                    <span>TOTAL</span>                   
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>STATUS</span>
+                    <span>TAXA EXP.</span>
+                    <span>TAXA ADICIONAL</span>
+                    <span>VALOR CORRIGIDO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>IPTU</span>
+                    <span>10/12/2012</span>
+                    <span>10/12/2012</span>
+                    <span>154,92</span>
+                    <span>2012</span>
+                    <span>154,75</span>
                     <span>0,00</span>
+                    <span>133,24</span>
+                    <span>48,92</span>
+                    <span>Ativada</span>
+                    <span>8,16</span>
+                    <span>0,00</span>
+                    <span>345,24</span>
+                </div>
+            </div>
+            <div class="tributos">
+                <div class="tributos-title remove">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>EXERC.</span>
+                    <span>TOTAL</span>                   
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>STATUS</span>
+                    <span>TAXA EXP.</span>
+                    <span>TAXA ADICIONAL</span>
+                    <span>VALOR CORRIGIDO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>ISS NOTA FISCAL</span>
+                    <span>01/10/2016</span>
+                    <span>04/10/2016</span>
+                    <span>525,05</span>
+                    <span>2016</span>
+                    <span>15,75</span>
+                    <span>0,00</span>
+                    <span>5,55</span>
+                    <span>4,73</span>
                     <span>Pendente</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>26,03</span>
+                </div>
+            </div>
+            <div class="tributos">
+                <div class="tributos-title remove">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>EXERC.</span>
+                    <span>TOTAL</span>                   
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>STATUS</span>
+                    <span>TAXA EXP.</span>
+                    <span>TAXA ADICIONAL</span>
+                    <span>VALOR CORRIGIDO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>ALVARÁ</span>
+                    <span>29/08/2016</span>
+                    <span>01/09/2016</span>
+                    <span>200,00</span>
+                    <span>2016</span>
+                    <span>6,00</span>
+                    <span>0,00</span>
+                    <span>2,18</span>
+                    <span>1,80</span>
+                    <span>Ativada</span>
+                    <span>0,00</span>
+                    <span>0,00</span>
+                    <span>9,98</span>
+                </div>
+            </div>
+            <div class="tributos">
+                <div class="tributos-title remove">
+                    <span>TRIBUTO</span>
+                    <span>EMISSÃO</span>
+                    <span>VENCIMENTO</span>
+                    <span>SUBTOTAL</span>
+                    <span>EXERC.</span>
+                    <span>TOTAL</span>                   
+                    <span>DESCONTO</span>
+                    <span>JUROS</span>
+                    <span>MULTA</span>
+                    <span>STATUS</span>
+                    <span>TAXA EXP.</span>
+                    <span>TAXA ADICIONAL</span>
+                    <span>VALOR CORRIGIDO</span>
+                </div>
+                <div class="tributos-content">
+                    <span>IPTU</span>
+                    <span>10/12/2012</span>
+                    <span>10/12/2012</span>
+                    <span>154,92</span>
+                    <span>2012</span>
+                    <span>154,75</span>
+                    <span>0,00</span>
+                    <span>133,24</span>
+                    <span>48,92</span>
+                    <span>Ativada</span>
+                    <span>8,16</span>
+                    <span>0,00</span>
+                    <span>345,24</span>
                 </div>
             </div>
         </section>
@@ -377,7 +491,7 @@
             </select>
         </div>
     </aside>
-    <footer class="container column align-items-center">
+    <footer class="container-main column align-items-center">
         <div class="w-50">
             <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
             <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
