--- a/ag-dam.html
+++ b/ag-dam.html
@@ -369,7 +369,7 @@
                             <button class="btn-close" data-bs-dismiss="modal"></button>
                         </div>
                         <div class="modal-body">
-                            <div class="modal-tributos d-flex">
+                            <div class="modal-tributos">
                                 <div class="modal-tributos-title">
                                     <span>EMISSÃO</span>
                                     <span>VENCIMENTO</span>
